apps/unbound/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-pihole-to-unbound
  namespace: unbound
spec:
  podSelector:
    matchLabels:
      app: unbound
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: pihole
    - podSelector:
        matchLabels:
          app: pihole
    ports:
    - protocol: UDP
      port: 53
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          name: pihole
    - podSelector:
        matchLabels:
          app: pihole
    ports:
    - protocol: UDP
      port: ""
